fix: implemented code to prevent horizontal overflow on header container for screens from 320px to 430px

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -80,3 +80,32 @@
 .header__paragraph {
   color: #6f6f6f;
 }
+
+@media screen and (min-width: 320px) and (max-width: 430px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    max-height: 0;
+    min-height: fit-content;
+    width: 100%;
+    outline: 1px solid lime;
+  }
+
+  .header__title {
+    margin: 0;
+  }
+
+  .header__description {
+    position: static;
+  }
+
+  .header__image {
+    position: static;
+    width: 100%;
+    height: auto;
+  }
+
+  .header__footer {
+    position: static;
+  }
+}
